# TopTagger

./: .Doxyfile  .gitignore  .travis.yml  Doxyfile  README.md  index.html
.travis/: generateDocumentationAndDeploy.sh  runTests.sh
CfgParser/: BuildFile.xml
CfgParser/include/: CfgDocument.hh  Condition.hh  Context.hh  Defs.h  Language.hh  Parameter.hh  Parser.h  Record.hh  TTException.h
CfgParser/interface/: CfgDocument.hh  Condition.hh  Context.hh  Defs.h  Parameter.hh  Parser.h  Record.hh  Scanner.h  TTException.h
CfgParser/src/: CfgDocument.cc  Condition.cc  Context.cc  Language.cc  Parameter.cc  Parser.cpp  Record.cc  Scanner.cpp  TTException.cpp
DataFormats/: BuildFile.xml
DataFormats/src/: classes.h  classes_def.xml
Tools/: ICHEPTaggerConfig.cfg  MVATrainers.py  MVATrainers_tf.py  MVAcommon.py  MVAcommon_tf.py  MVAhistograms_tf.py  MVAstuff.cc  Makefile  Makefile.in  PlotUtility.cc  PlotUtility.h  README.md  TagTest1.cc  TagTest1.cc_org  TagTest1.h  TaggerUtility.cc  TaggerUtility.h  TopTaggerClusterOnly.cfg  TopTaggerConfig.cfg  Training.py  Training_tf.py  Validation.py  Validation_tf.py  configure.ac  getTaggerCfg.sh  makeTrainingTuples.C  openCVTest.cpp  opencvSetup.csh  opencvSetup.sh  rocPlot.py  sharkTest.cpp  sklearnTest.py  sklearnTest_v2.py  tensorflowTest.cpp  translateData.py
Tools/batches/: generic.py  test.py
Tools/condor/: condorSubmit.py  condor_submit.txt  goMakeTrainingTuples.sh
Tools/cpp/: TaggerUtility.h  makeTrainingTuples.C
Tools/python/: CreateModel.py  CustomQueueRunner.py  DataGetter.py  DataGetterTest.py  DataManager.py  DataSample.py  DataSet.py  FileNameQueue.py  MVATrainers.py  Training.py  Validation.py  Validation2.py  compareROC-2.py  compareROC.py  integrate.py  rocPlot.py  submitBatch.py  taggerOptions.py  translateData.py
Tools/src/: MVAstuff.h  makeTrainingTuples.C  openCVTest.cpp
TopTagger/: BuildFile.xml  README.md
TopTagger/include/: Constituent.h  TTMAK8Filter.h  TTMAK8TopFilter.h  TTMAK8WFilter.h  TTMBasicClusterAlgo.h  TTMConstituentReqs.h  TTMFactory.h  TTMFilterBase.h  TTMFinalSort.h  TTMHEPRequirements.cpp  TTMHEPRequirements.h  TTMLazyClusterAlgo.h  TTMOpenCVMVA.h  TTMOverlapResolution.h  TTMRemainingSystem.h  TTMTFPyBind.h  TTMTMVA.h  TTMTensorflow.h  TTMXGBoost.h  TTModule.h  TopObjLite.h  TopObject.h  TopTagger.h  TopTaggerFactory.h  TopTaggerResults.h  TopTaggerUtilities.h
TopTagger/interface/: Constituent.h  TTMAK8TopFilter.h  TTMBasicClusterAlgo.h  TTMConstituentReqs.h  TTMDiscriminatorFilter.h  TTMFilterBase.h  TTMFinalSort.h  TTMHEPRequirements.h  TTMLazyClusterAlgo.h  TTMNanoAODClusterAlgo.h  TTMOpenCVMVA.h  TTMOverlapResolution.h  TTMRemainingSystem.h  TTMScaleSyst.h  TTMTFPyBind.h  TTMTMVA.h  TTMTensorflow.h  TTMXGBoost.h  TTModule.h  TopObjLite.h  TopObject.h  TopTaggerPython.h  TopTaggerResults.h  TopTaggerUtilities.h  lester_mt2_bisect.h
TopTagger/plugins/: BuildFile.xml  SHOTProducer.cc
TopTagger/python/: SHOTProducer_cfi.py  TopTagger.py  TopTaggerProducer.py  __init__.py  resolvedTagger_cff.py
TopTagger/scripts/: getTaggerCfg.sh
TopTagger/src/: BuildFile.xml  CfgDocument.cc  Constituent.cpp  Context.cc  Language.cc  Parser.cpp  Record.cc  (+28 more)
TopTagger/test/: Example_Legacy_TopTagger.cfg  Example_TopTagger.cfg  Makefile  Makefile.in  configure  configure.ac  exampleInputs.root  rootdict.h  run_topTagger.py  taggerSetup.csh.in  taggerSetup.sh.in  topTaggerTest.cpp
html/: CfgDocument_8hh_source.html  Condition_8hh_source.html  Constituent_8h_source.html  Context_8hh_source.html  Defs_8h_source.html  Language_8hh_source.html  MVAstuff_8h_source.html  Parameter_8hh_source.html  Parser_8h_source.html  PlotUtility_8h_source.html  Record_8hh_source.html  Scanner_8h_source.html  TTException_8h_source.html  TTMAK8TopFilter_8h_source.html  TTMBasicClusterAlgo_8h_source.html  TTMConstituentReqs_8h_source.html  TTMDiscriminatorFilter_8h_source.html  TTMFactory_8h_source.html  TTMFilterBase_8h_source.html  TTMFinalSort_8h_source.html  TTMHEPRequirements_8h_source.html  TTMLazyClusterAlgo_8h_source.html  TTMNanoAODClusterAlgo_8h_source.html  TTMOpenCVMVA_8h_source.html  TTMOverlapResolution_8h_source.html  TTMRemainingSystem_8h_source.html  TTMScaleSyst_8h_source.html  TTMTFPyBind_8h_source.html  TTMTMVA_8h_source.html  TTMTensorflow_8h_source.html  TTMXGBoost_8h_source.html  TTModule_8h.html  TTModule_8h_source.html  TagTest1_8h_source.html  TaggerUtility_8h_source.html  TopObjLite_8h_source.html  TopObject_8h_source.html  TopTaggerPython_8h_source.html  TopTaggerResults_8h_source.html  TopTaggerUtilities_8h.html  (+209 more)
include/: TTMHEPRequirements.cpp  TTMHEPRequirements.h  TTMLazyClusterAlgo.h  TTMOverlapResolution.h  TopObject.h  TopTagger.h  TopTaggerFactory.h  TopTaggerResults.h  TopTaggerUtilities.h
latex/: TTModule_8h.tex  TopTaggerUtilities_8h.tex  annotated.tex  classBaseHistgram.tex  classCfgBuilder.tex  classConstituent.tex  classCreateModel_1_1CreateModel.tex  classCustomQueueRunner_1_1CustomQueueRunner.eps  classCustomQueueRunner_1_1CustomQueueRunner.tex  classDataGetter_1_1DataGetter.tex  classDataManager_1_1DataManager.tex  classDataSample_1_1DataSample.tex  classDataSet_1_1DataSet.tex  classFileNameQueue_1_1FileNameQueue.tex  classHDF5Writer.tex  classPrepVariables.tex  classSHOTProducer.eps  classSHOTProducer.tex  classTTException.tex  classTTMAK8TopFilter.eps  classTTMAK8TopFilter.tex  classTTMBasicClusterAlgo.eps  classTTMBasicClusterAlgo.tex  classTTMConstituentReqs.eps  classTTMConstituentReqs.tex  classTTMDiscriminatorFilter.eps  classTTMDiscriminatorFilter.tex  classTTMFactory.tex  classTTMFilterBase.eps  classTTMFilterBase.tex  classTTMFinalSort.eps  classTTMFinalSort.tex  classTTMHEPRequirements.eps  classTTMHEPRequirements.tex  classTTMLazyClusterAlgo.eps  classTTMLazyClusterAlgo.tex  classTTMNanoAODClusterAlgo.eps  classTTMNanoAODClusterAlgo.tex  classTTMOpenCVMVA.eps  classTTMOpenCVMVA.tex  (+109 more)
src/: Constituent.cpp  TTMHEPRequirements.cpp  TTMLazyClusterAlgo.cpp  TTMOverlapResolution.cpp  TopObject.cpp  TopTagger.cpp  TopTaggerFactory.cpp  TopTaggerUtilities.cpp
(+75 files in other folders)
